--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -50,6 +50,7 @@
                 placeholder="Enter tags"
                 [formControl]="tagField"
                 (keyup.enter)="addTag()" 
+                formControlName="tagList"
                 [matAutocomplete]="auto"/>
                 <div id = "idAutoComplete">
                   <mat-autocomplete #auto="matAutocomplete">
