--- a/src/app/shared/article-helpers/article-preview.component.html
+++ b/src/app/shared/article-helpers/article-preview.component.html
@@ -9,7 +9,7 @@
   </app-article-meta>
 
   <a [routerLink]="['/article', article.slug]" class="preview-link">
-    <h1>{{ article.title }}</h1>
+    <h1>{{ article.title | uppercase}}</h1>
     <p>{{ article.description }}</p>
     <span>Read more...</span>
     <ul class="tag-list">
@@ -18,7 +18,7 @@
         {{ tag }}
       </li>
     </ul>
-    
+
   </a>
 
 </div>
