--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,4 @@
 <div class="home-page">
-
   <div class="banner" *appShowAuthed="false">
     <div class="container">
       <h1 class="logo-font">conduit</h1>
@@ -9,33 +8,53 @@
 
   <div class="container page">
     <div class="row">
-
       <div class="col-md-9">
         <div class="feed-toggle">
           <ul class="nav nav-pills outline-active">
             <li class="nav-item">
-              <a class="nav-link"
-                 [ngClass]="{'active': listConfig.type === 'feed'}"
-                 (click)="setListTo('feed')">
-                 Your Feed
+              <a
+                class="nav-link"
+                [ngClass]="{ active: listConfig.type === 'feed' }"
+                (click)="setListTo('feed')"
+              >
+                Your Feed
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"
-                 [ngClass]="{'active': listConfig.type === 'all' && !listConfig.filters.tag}"
-                 (click)="setListTo('all')">
-                 Global Feed
+              <a
+                class="nav-link"
+                [ngClass]="{
+                  active: listConfig.type === 'all' && !listConfig.filters.tag
+                }"
+                (click)="setListTo('all')"
+              >
+                Global Feed
               </a>
             </li>
-            <li class="nav-item" [hidden]="!listConfig.filters.tag">
-              <a class="nav-link active">
-                <i class="ion-pound"></i> {{ listConfig.filters.tag }}
-              </a>
-            </li>
+
           </ul>
         </div>
+        <br />
 
-        <app-article-list [limit]="10" [config]="listConfig"></app-article-list>
+        <div class="form-group row">
+          <label for="limit" class="col-sm4 col-form-label"
+            >Limit to show</label
+          >
+          <div class="col-sm-8">
+            <input
+              id="float-input"
+              type="text"
+              pInputText
+              class="form-control" id="limit" placeholder="limit to show"
+              [(ngModel)]="num_limit"
+            />
+          </div>
+        </div>
+
+        <app-article-list
+          [limit]="num_limit"
+          [config]="listConfig"
+        ></app-article-list>
       </div>
 
       <div class="col-md-3">
@@ -43,23 +62,22 @@
           <p>Popular Tags</p>
 
           <div class="tag-list">
-            <a *ngFor="let tag of tags"
-               (click)="setListTo('all', {tag: tag})"
-               class="tag-default tag-pill">
-               {{ tag }}
+            <a
+              *ngFor="let tag of tags"
+              (click)="setListTo('all', { tag: tag })"
+              class="tag-default tag-pill"
+            >
+              {{ tag }}
             </a>
           </div>
 
-          <div [hidden]="tagsLoaded">
-            Loading tags...
-          </div>
+          <div [hidden]="tagsLoaded">Loading tags...</div>
 
           <div [hidden]="!tagsLoaded || tags.length > 0">
             No tags are here... yet.
           </div>
         </div>
       </div>
-
     </div>
   </div>
 </div>
