--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,6 +32,17 @@
               </a>
             </li>
 
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                [ngClass]="{
+                  active: listConfig.type === 'all' && !listConfig.filters.tag
+                }"
+                (click)="seeStat()"
+              >
+                Statistique
+              </a>
+            </li>
           </ul>
         </div>
         <br />
