article liste design
file:///home/dechou/Documents/dechou/kam/newproject/realWorldFront/angular.json
file:///home/dechou/Documents/dechou/kam/newproject/realWorldFront/src/app/app.module.ts
file:///home/dechou/Documents/dechou/kam/newproject/realWorldFront/src/app/home/home.component.css
file:///home/dechou/Documents/dechou/kam/newproject/realWorldFront/src/app/home/home.component.html
file:///home/dechou/Documents/dechou/kam/newproject/realWorldFront/src/app/shared/article-helpers/article-list.component.css
file:///home/dechou/Documents/dechou/kam/newproject/realWorldFront/src/app/shared/article-helpers/article-list.component.html
file:///home/dechou/Documents/dechou/kam/newproject/realWorldFront/src/app/shared/article-helpers/article-list.component.ts
file:///home/dechou/Documents/dechou/kam/newproject/realWorldFront/src/app/shared/shared.module.ts

--- a/src/app/shared/article-helpers/article-list.component.css
+++ b/src/app/shared/article-helpers/article-list.component.css
@@ -1,3 +1,148 @@
 .page-link {
   cursor: pointer;
 }
+
+
+.p-dropdown {
+  width: 14rem;
+  font-weight: normal;
+}
+
+.product-name {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+:host ::ng-deep .product-description {
+  margin: 0 0 1rem 0;
+}
+
+:host ::ng-deep .product-category-icon {
+  vertical-align: middle;
+  margin-right: .5rem;
+}
+
+:host ::ng-deep .product-category {
+  font-weight: 600;
+  vertical-align: middle;
+}
+
+:host ::ng-deep .product-list-item {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  width: 100%;
+}
+
+:host ::ng-deep .product-list-item img {
+  width: 150px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  margin-right: 2rem;
+}
+
+:host ::ng-deep .product-list-item .product-list-detail {
+  flex: 1 1 0;
+}
+
+:host ::ng-deep .product-list-item .p-rating {
+  margin: 0 0 .5rem 0;
+}
+
+:host ::ng-deep .product-list-item .product-price {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-bottom: .5rem;
+  align-self: flex-end;
+}
+
+:host ::ng-deep .product-list-item .product-list-action {
+  display: flex;
+  flex-direction: column;
+}
+
+:host ::ng-deep .product-list-item .p-button {
+  margin-bottom: .5rem;
+}
+
+
+:host ::ng-deep .product-grid-item {
+  margin: .5em;
+  border: 1px solid #dee2e6;
+}
+
+:host ::ng-deep .product-grid-item .product-grid-item-top,
+:host ::ng-deep .product-grid-item .product-grid-item-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+:host ::ng-deep .product-grid-item img {
+  width: 75%;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  margin: 2rem 0;
+}
+
+:host ::ng-deep .product-grid-item .product-grid-item-content {
+  text-align: center;
+}
+
+:host ::ng-deep .product-grid-item .product-price {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.card {
+  padding: 2rem;
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  margin-bottom: 2rem;
+}
+
+.card:hover{
+  transition: .2s;
+  transform: scale(1.1);
+  z-index: 10000;
+  border: 1px solid lightseagreen;
+  background: #adff2f87;
+}
+
+:host ::ng-deep .p-dataview-grid .p-dataview-content .p-grid {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+:host ::ng-deep .product-list-item {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  :host ::ng-deep .p-jc-md-between {
+    justify-content: space-between;
+  }
+
+  :host ::ng-deep ost ::ng-deep .p-flex-md-row {
+    flex-direction: row !important;
+  }
+}
+
+
+:host ::ng-deep .p-d-flex {
+  display: flex !important;
+}
+
+.p-col-12 {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px){
+  .p-md-4 {
+    width: 33.3333%;
+  }
+  .p-md-1, .p-md-2, .p-md-3, .p-md-4, .p-md-5, .p-md-6, .p-md-7, .p-md-8, .p-md-9, .p-md-10, .p-md-11, .p-md-12 {
+    flex: 0 0 auto;
+  }
+}
