--- a/src/app/shared/article-helpers/article-list.component.html
+++ b/src/app/shared/article-helpers/article-list.component.html
@@ -1,4 +1,4 @@
-<br />
+<!--<br />
 <div class="form-group row">
   <div class="col-sm">
     <select [(ngModel)]="selectedValue" class="custom-select my-select">
@@ -25,7 +25,119 @@
   "
   [article]="article"
 >
-</app-article-preview>
+</app-article-preview>-->
+
+<p-dataView #dv [value]="products" [paginator]="true" [rows]="limit" filterBy="title"
+            [sortField]="sortField" [sortOrder]="sortOrder" layout="grid">
+  <ng-template pTemplate="header">
+    <div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-between">
+<!--      <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By Price" (onChange)="onSortChange($event)" styleClass="p-mb-2 p-mb-md-0"></p-dropdown>-->
+      <span class="p-input-icon-left p-mb-2 p-mb-md-0">
+                  <i class="pi pi-search"></i>
+                  <input type="search" pInputText placeholder="Search by Name" (input)="dv.filter($event.target.value)">
+              </span>
+      <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
+    </div>
+  </ng-template>
+  <ng-template let-product pTemplate="listItem">
+    <div class="p-col-12">
+      <div class="product-list-item">
+        <img src="https://static.productionready.io/images/smiley-cyrus.jpg" [alt]="product.title"/>
+        <div class="product-list-detail">
+          <div class="product-name">
+            <a [routerLink]="['/article', product.slug]" style="text-decoration: none">
+              {{product.title | uppercase}}
+            </a>
+          </div>
+          <div class="product-description">{{product.description}}</div>
+<!--          <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating>-->
+          <i class="pi pi-tag product-category-icon"></i><span class="product-category">Accessoires</span>
+        </div>
+        <div class="product-list-action">
+<!--          <span class="product-price">${{product.price}}</span>-->
+<!--          <p-button icon="pi pi-shopping-cart" label="Add to Cart"></p-button>-->
+          <span [class]="'product-badge status-instock'">EN STOCK</span>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+  <ng-template let-product pTemplate="gridItem">
+    <div class="p-col-4 p-md-4">
+      <div class="product-grid-item card">
+        <div class="product-grid-item-top">
+          <div>
+            <i class="pi pi-tag product-category-icon"></i>
+            <span class="product-category">Accessoire</span>
+          </div>
+          <span [class]="'product-badge status-instock'">EN STOCK</span>
+        </div>
+        <div class="product-grid-item-content">
+          <img src="https://static.productionready.io/images/smiley-cyrus.jpg" [alt]="product.title" style="width: 40%!important;"/>
+          <div class="product-name">
+            <a [routerLink]="['/article', product.slug]" style="text-decoration: none">
+              {{product.title | uppercase}}
+            </a>
+          </div>
+          <div class="product-description">{{product.description}}</div>
+<!--          <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating>-->
+        </div>
+        <div class="product-grid-item-bottom">
+<!--          <span class="product-price">${{product.price}}</span>-->
+<!--          <p-button icon="pi pi-shopping-cart" [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"></p-button>-->
+        </div>
+      </div>
+    </div>
+  </ng-template>
+</p-dataView>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="app-article-preview" [hidden]="!loading">Loading articles...</div>
 
@@ -33,7 +145,7 @@
   No articles are here... yet.
 </div>
 
-<nav [hidden]="loading || totalPages.length <= 1">
+<!--<nav [hidden]="loading || totalPages.length <= 1">
   <ul class="pagination">
     <li
       class="page-item"
@@ -44,4 +156,4 @@
       <a class="page-link">{{ pageNumber }}</a>
     </li>
   </ul>
-</nav>
+</nav>-->
