--- a/src/app/shared/article-helpers/article-list.component.html
+++ b/src/app/shared/article-helpers/article-list.component.html
@@ -54,8 +54,8 @@
           <i class="pi pi-tag product-category-icon"></i><span class="product-category">Accessoires</span>
         </div>
         <div class="product-list-action">
-<!--          <span class="product-price">${{product.price}}</span>-->
-<!--          <p-button icon="pi pi-shopping-cart" label="Add to Cart"></p-button>-->
+          <span class="product-price">$10.5</span>
+          <p-button icon="pi pi-shopping-cart" label="Add to Cart"></p-button>
           <span [class]="'product-badge status-instock'">EN STOCK</span>
         </div>
       </div>
@@ -82,8 +82,8 @@
 <!--          <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating>-->
         </div>
         <div class="product-grid-item-bottom">
-<!--          <span class="product-price">${{product.price}}</span>-->
-<!--          <p-button icon="pi pi-shopping-cart" [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"></p-button>-->
+          <span class="product-price">$10.5</span>
+          <p-button icon="pi pi-shopping-cart"></p-button>
         </div>
       </div>
     </div>
