--- a/src/app/shared/article-helpers/article-list.component.html
+++ b/src/app/shared/article-helpers/article-list.component.html
@@ -27,14 +27,19 @@
 >
 </app-article-preview>-->
 
-<p-dataView #dv [value]="products" [paginator]="true" [rows]="limit" filterBy="title"
+<p-dataView #dv [value]="products" [paginator]="true" [rows]="limit" [filterBy]="selectedValue"
             [sortField]="sortField" [sortOrder]="sortOrder" layout="grid">
   <ng-template pTemplate="header">
     <div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-between">
-<!--      <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Sort By Price" (onChange)="onSortChange($event)" styleClass="p-mb-2 p-mb-md-0"></p-dropdown>-->
+      <select [(ngModel)]="selectedValue" class="custom-select my-select" style="width: 20%">
+        <option *ngFor="let property of properties" value="{{ property }}">
+          {{ property }}
+        </option>
+      </select>
+<!--        <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Filtrer Par ..." (onChange)="onSortChange($event)" styleClass="p-mb-2 p-mb-md-0"></p-dropdown>-->
       <span class="p-input-icon-left p-mb-2 p-mb-md-0">
                   <i class="pi pi-search"></i>
-                  <input type="search" pInputText placeholder="Search by Name" (input)="dv.filter($event.target.value)">
+                  <input type="search" pInputText [placeholder]="'Recherché par ' + selectedValue" (input)="dv.filter($event.target.value)">
               </span>
       <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
     </div>
@@ -50,10 +55,20 @@
             </a>
           </div>
           <div class="product-description">{{product.description}}</div>
+          <span>Read more...</span> <br>
 <!--          <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating>-->
           <i class="pi pi-tag product-category-icon"></i><span class="product-category">Accessoires</span>
         </div>
         <div class="product-list-action">
+          <div style="display: inline-block">
+            <app-favorite-button
+              [article]="product"
+              (toggle)="onToggleFavorite($event)"
+              class="pull-xs-right">
+              {{product.favoritesCount}}
+            </app-favorite-button>
+          </div>
+          <br>
           <span class="product-price">$10.5</span>
           <p-button icon="pi pi-shopping-cart" label="Add to Cart"></p-button>
           <span [class]="'product-badge status-instock'">EN STOCK</span>
@@ -79,6 +94,16 @@
             </a>
           </div>
           <div class="product-description">{{product.description}}</div>
+          <span>Read more...</span>
+          <br>
+          <div style="display: inline-block">
+            <app-favorite-button
+              [article]="product"
+              (toggle)="onToggleFavorite($event)"
+              class="pull-xs-right">
+              {{product.favoritesCount}}
+            </app-favorite-button>
+          </div>
 <!--          <p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating>-->
         </div>
         <div class="product-grid-item-bottom">
